# django-mysite

./: pyproject.toml
config/: settings.py
masterpieces/: admin.py  apps.py  models.py
masterpieces/migrations/: 0001_initial.py  0002_masterpiece_language_alter_masterpiece_file_and_more.py  0003_masterpiece_register_only.py
