[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["yoosunu <yoosunu010@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
